@@ -1,6 +1,9 @@
 Release 0.6.2 (in development)
 ==============================
 
+* #196: Add a warning if an extension module doesn't have a
+  ``setup()`` function.
+
 * #158: Allow '..' in template names, and absolute template paths;
   Jinja 2 by default disables both.  
 
